# MLA2-final

./: CMakeLists.txt  scratchCNN.sh
src/: mnist.txt
src/ANN/: ANN.cpp  ANN.h
src/AbstractNetwork/: AbstractNetwork.h
src/Constants/: MNISTConstants.h
src/Conv2D/: Conv2D.cpp  Conv2D.h
src/FullyConnectedNetwork/: FullyConnectedNetwork.cpp  FullyConnectedNetwork.h
src/Loadable/: Loadable.h
src/MNISTClassifier/: Entropy.cpp  KL_Divergence.cpp  LargestMargin.cpp  QBC.cpp  SmallestMargin.cpp  UncertaintySampling.cpp
src/MNISTDatasetReader/: MNISTDatasetReader.cpp  MNISTDatasetReader.h
src/Pools/: AbstractPool.h
src/Pools/MaxPool/: MaxPool.cpp  MaxPool.h
src/Pools/MinPool/: MinPool.cpp  MinPool.h
src/ReLU/: ReLU.cpp  ReLU.h
src/SoftmaxClassifier/: SoftmaxClassifier.cpp  SoftmaxClassifier.h
src/Vector/: Vector.cpp  Vector.h
